Bổ sung view wallet

--- a/src/i18n/messages/vi.json
+++ b/src/i18n/messages/vi.json
@@ -1,6 +1,7 @@
 {
   "Menu": "Menu",
   "SHOW_MORE": "Xem thêm",
+  "LOADING": "Đang tải",
   "Dashboards": {
     "Dashboards": "Bảng điều khiển",
     "Default": "Mặc định",
