--- a/src/i18n/messages/vi.json
+++ b/src/i18n/messages/vi.json
@@ -2,6 +2,11 @@
   "Menu": "Menu",
   "SHOW_MORE": "Xem thêm",
   "LOADING": "Đang tải",
+  "DEFAULT": {
+    "PAGE": {
+      "TITLE": "Space"
+    }
+  },
   "Dashboards": {
     "Dashboards": "Bảng điều khiển",
     "Default": "Mặc định",
