--- a/src/i18n/messages/vi.json
+++ b/src/i18n/messages/vi.json
@@ -37,5 +37,9 @@
   "Wallets": {
     "Wallets": "Ví",
     "Create": "Tạo ví"
+  },
+  "Icons": {
+    "Icons": "Icons",
+    "Wallet": "Icons Ví"
   }
 }
